Added all_posts, likes_count moved to Schema
